# gpuvsim

./: .gitignore  CMakeLists.txt  Makefile  configure  cuda_check.cmake
include/: MSFITSIO.cuh  directioncosines.cuh  functions.cuh  rngs.cuh
scripts/: check_cuda.cu
src/: MSFITSIO.cu  directioncosines.cu  functions.cu  main.cu  rngs.cu  rvgs.cu
